src/objects/Agency_Campaign__c.object
<CustomObject>
    <description>Tracking the campaigns that connect Brands to Agencies and Retailers</description>
    <fields>
        <fullName>Agency_Rate__c</fullName>
        <formula>IF(!(Rate__c=0),Rate__c,Agency__r.Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency_Week_Rate__c</fullName>
        <formula>Agency__r.Weekly_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Week Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Agency/Platform</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Campaigns (Agency)</relationshipLabel>
        <relationshipName>Agency_Campaigns1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agency_weeks__c</fullName>
        <formula>Agency__r.Max_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Max Campaign Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Extra_Weeks__c</fullName>
        <formula>if(Weekly_Rate__c&gt;0,Floor(Weeks__c-Max_Weeks__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Extra Weeks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_as__c</fullName>
        <formula>CASE(Number_of_Campaigns__c,
1, "Standard Campaign",
2, "Double Campaign",
3, "Bill as three", 
4, "Bill as four", 
5, "Bill as five", 
6, "Bill as six",
7, "Bill as seven",
8, "Bill as eight",
9, "Bill as nine",
10, "Bill as ten",
TEXT(Number_of_Campaigns__c)&amp; ' campaigns')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill as</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Campaigns (Account)</relationshipLabel>
        <relationshipName>Agency_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_ID_PO__c</fullName>
        <label>Billing ID/PO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled_or_Individual_Links__c</fullName>
        <label>Bundled or Individual Links</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bundled_or_Individual_Links</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clicks_on_C2C_link_only__c</fullName>
        <label>Clicks (on C2C link only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Agreement</label>
        <referenceTo>APXT_Redlining__Contract_Agreement__c</referenceTo>
        <relationshipLabel>Agency Campaigns</relationshipLabel>
        <relationshipName>Agency_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Agency Campaigns</relationshipLabel>
        <relationshipName>Agency_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracted_Impressions__c</fullName>
        <label>Contracted Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Notes_Description__c</fullName>
        <label>Cost Notes Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Notes__c</fullName>
        <label>Cost Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill as 1</fullName>
                </value>
                <value>
                    <fullName>Bill as 2</fullName>
                </value>
                <value>
                    <fullName>Bill as 3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_for_Invoice__c</fullName>
        <formula>"Campaign #" &amp;SmartSuite__c &amp;" "&amp; TRIM(Billing_ID_PO__c &amp; " ") &amp; " - " &amp; Brands__c &amp;  " - " &amp; TEXT( Number_of_Campaigns__c ) &amp; " Campaign(s); Media Type: " &amp; 
IF(INCLUDES( Media__c, "Social"), "Social Network; ", "") &amp; 
IF(INCLUDES( Media__c, "Influencer"), "Influencer; ", "") &amp; 
IF(INCLUDES( Media__c, "Mobile in-app"), "Mobile in-app; ", "") &amp; 
IF(INCLUDES( Media__c, "Print ad"), "Print ad; ", "") &amp; 
IF(INCLUDES( Media__c, "Programmatic"), "Programmatic; ", "") &amp; 
IF(INCLUDES( Media__c, "Native"), "Native", "") &amp; 
IF(INCLUDES( Media__c , "Email"), "Email; ", "") &amp;
IF(INCLUDES( Media__c , "Website"), "Website; ", "") &amp;
IF(INCLUDES( Media__c , "QR Code"), "QR Code; ", "") &amp;
IF(INCLUDES( Media__c , "Display"), "Display; ", "") &amp;
IF(INCLUDES( Media__c , "Chatbot"), "Chatbot; ", "") &amp;
IF(INCLUDES( Media__c , "YouTube"), "YouTube; ", "") &amp;
IF(INCLUDES( Media__c , "Video"), "Video; ", "") &amp;
IF(INCLUDES( Media__c , "Website"), "Website; ", "") &amp;
IF(INCLUDES( Media__c , "Other"), "Other; ", "") &amp;
 "Retailer: "  &amp; TRIM( SUBSTITUTE( Retailer_s__c,","," ") ) &amp;
 "; Launch date: " &amp;  TEXT(Start_Date__c)&amp;br()&amp;
Bill_as__c &amp; br() &amp;
Cost_Notes_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description for Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollars_Carted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dollars Carted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_Check__c</fullName>
        <formula>IMAGE(
IF(Number_of_Campaigns__c=0,"/resource/1612364348000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png",
IF((Agency_weeks__c*Number_of_Campaigns__c)&lt;Weeks__c||Weekly_Rate__c&gt;0	,"/resource/1612364348000/GraphicsPackNew/fatcow/farmfresh/16/stop.png","/resource/1612364348000/GraphicsPackNew/fatcow/farmfresh/16/tick.png")),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has been invoiced?</description>
        <label>Invoiced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_s__c</fullName>
        <label>Link(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Manufacturer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Campaigns as Manufacturer</relationshipLabel>
        <relationshipName>Agency_Campaigns_as_Manufacturer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Weeks__c</fullName>
        <label>Max Weeks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <label>Media Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chatbot</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Mobile in-app</fullName>
                </value>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>Print ad</fullName>
                </value>
                <value>
                    <fullName>Programmatic</fullName>
                </value>
                <value>
                    <fullName>QR Code</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>YouTube</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Campaigns__c</fullName>
        <label>Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Links__c</fullName>
        <label>Number of Links</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_products__c</fullName>
        <label>Number of products</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>TEXT( Agency__r.Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Products that are being sold using the links</description>
        <label>Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retailer_s__c</fullName>
        <label>Retailer(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartLink_Type__c</fullName>
        <label>SmartLink Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SmartLink_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SmartSuite__c</fullName>
        <externalId>true</externalId>
        <label>SmartSuite ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Carts_People_Clicked__c</fullName>
        <label>Total Carts (People Clicked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Products_in_Cart__c</fullName>
        <label>Total Products in Cart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Number_of_Campaigns__c * ( Agency_Rate__c +Bill_Extra_Weeks__c*Weekly_Rate__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Rate__c</fullName>
        <description>Rate for weeks above max weeks</description>
        <label>Weekly Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weeks__c</fullName>
        <formula>(End_Date__c -  Start_Date__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Agency Campaign</label>
    <nameField>
        <label>Agency Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>